# websocket

./: data.json  main.py  pyproject.toml
templates/: index.html
