[tool.poetry]
name = "websocket"
version = "0.1.0"
description = ""
authors = ["Mapc <mapctrigotixd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
websockets = "^10.2"
geopy = "^2.2.0"
bs4 = "^0.0.1"
lxml = "^4.8.0"
requests = "^2.27.1"
aiohttp = "^3.8.1"
Jinja2 = "^3.0.3"
nest-asyncio = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
